# pyduckling

./: .dockerignore  CHANGELOG.md  CROSS_PLATFORM.md  Cargo.toml  HISTORY.md  README.md  RELEASE.md  build-macos.sh  build-vars.sh  build.rs  build.sh  pyproject.toml  test-cross-platform.py
.github/workflows/: build.yml  cross-platform-build.yml
containers/duckling-ffi/: Dockerfile  build.sh
containers/pyduckling/: build.sh
containers/pyduckling/glibc/: Dockerfile
containers/pyduckling/musl/: Dockerfile
duckling/: __init__.py
duckling-ffi/: .gitignore  README.md  duckling-ffi.cabal  stack.yaml
duckling-ffi/DucklingFFI/: FFI.hs
src/: lib.rs
