[package]
name = "pyduckling-native-phihos"
version = "0.1.1-dev2"
authors = ["Edgar Andrés Margffoy Tuay <andfoy@gmail.com>"]
description = "Rust-based Python wrapper for duckling library in Haskell."
repository = "https://github.com/treble-ai/pyduckling"
license = "MIT"
keywords = ["haskell", "python", "parse", "duckling"]
readme = "README.md"
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "duckling"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]
