name:                duckling-ffi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/treble-ai/duckling-ffi
license:             MIT
license-file:        LICENSE
author:              Edgar Andrés Margffoy Tuay
maintainer:          edgar@treble.ai
copyright:           2020 Edgar Andrés Margffoy Tuay
category:            Systems
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      DucklingFFI
  exposed-modules:     FFI
  build-depends:       base
                     , duckling
                     , aeson < 2
                    --  , curryrs >= 0.2.0 && < 0.3.0
                     , text
                     , bytestring
                     , string-conversions
                     , extra
                     , unordered-containers
                     , directory
                     , time
                     , timezone-olson
                     , timezone-series
                     , filepath
  default-language:    Haskell2010
  -- Static linking libraries
  extra-libraries:     HSrts
  -- Static compilation flags
  ghc-options: -static -no-hs-main -staticlib -optl-static -fPIC -o libducklingffi.a
  cc-options: -static
  ld-options: -static
  -- Dynamic compilation library
  -- ghc-options: -dynamic -fPIC -no-hs-main -shared -o libducklingffi.so
  other-extensions: ForeignFunctionInterface

source-repository head
  type:     git
  location: https://github.com/treble-ai/duckling-ffi
